add vir threads