@@ -22,6 +22,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.RejectedExecutionException;
 import java.util.function.Function;
 import java.util.concurrent.TimeUnit;
 
@@ -107,7 +108,8 @@ public final class ServerModule {
     }
 
     /**
-     * Provide I/O thread pool singleton
+     * Provides a bounded virtual-thread I/O executor singleton.
+     *
      * @param config application configuration
      * @return executor service
      */
@@ -115,18 +117,16 @@ public final class ServerModule {
     @Singleton
     ExecutorService ioPool(AppConfig config) {
         int parallelism = config.ioParallelism();
-        LOGGER.info("node={} pool=create threads={}", LogUtil.node(), parallelism);
+        LOGGER.info("node={} pool=create type=virtual threads={}", LogUtil.node(), parallelism);
         return new java.util.concurrent.AbstractExecutorService() {
-            private final ExecutorService delegate = Executors.newFixedThreadPool(parallelism, r -> {
-                Thread t = new Thread(r, "parquet-io");
-                t.setDaemon(true);
-                return t;
-            });
+            private final ExecutorService delegate = Executors.newFixedThreadPool(
+                    parallelism, Thread.ofVirtual().name("parquet-io-", 0).factory());
             private final java.util.concurrent.atomic.AtomicInteger activeTasks = new java.util.concurrent.atomic.AtomicInteger(0);
             private final java.util.concurrent.atomic.AtomicLong submittedTasks = new java.util.concurrent.atomic.AtomicLong(0);
 
             @Override
             public void execute(Runnable command) {
+                java.util.Objects.requireNonNull(command, "command");
                 long submitTime = System.nanoTime();
                 long taskId = submittedTasks.incrementAndGet();
                 int active = activeTasks.incrementAndGet();
@@ -134,19 +134,24 @@ public final class ServerModule {
                     LOGGER.warn("node={} pool=queueGrowth active={} max={} queued={}",
                             LogUtil.node(), active, parallelism, active - parallelism);
                 }
-                delegate.execute(() -> {
-                    long queueDelay = System.nanoTime() - submitTime;
-                    if (queueDelay > 1_000_000_000L) {
-                        LOGGER.warn("qid={} node={} pool=starvation taskId={} queueDelay={} active={}",
-                                LogUtil.qid(), LogUtil.node(), taskId,
-                                LogUtil.elapsedNanos(submitTime), activeTasks.get());
-                    }
-                    try {
-                        command.run();
-                    } finally {
-                        activeTasks.decrementAndGet();
-                    }
-                });
+                try {
+                    delegate.execute(() -> {
+                        long queueDelay = System.nanoTime() - submitTime;
+                        if (queueDelay > 1_000_000_000L) {
+                            LOGGER.warn("qid={} node={} pool=starvation taskId={} queueDelay={} active={}",
+                                    LogUtil.qid(), LogUtil.node(), taskId,
+                                    LogUtil.elapsedNanos(submitTime), activeTasks.get());
+                        }
+                        try {
+                            command.run();
+                        } finally {
+                            activeTasks.decrementAndGet();
+                        }
+                    });
+                } catch (RejectedExecutionException e) {
+                    activeTasks.decrementAndGet();
+                    throw e;
+                }
             }
 
             @Override
